crates/display/src/snapshots/telmo_display__ui__tests__linux_displays.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(mock::linux(), \"j\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│     Dell S2722DGM                  ━━━━━━━━━━━━━━────────────────    45%               │
│ ▌   LG 24MK430H                    brightness not adjustable                           │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Night Shift ──────────────────────────────────────────────────────────────────────────╮
│   ● Warmth                         ━━━━━━━━━━━━──────────────────    40%               │
╰────────────────────────────────────────────────────────────────────────────────────────╯












 ←→ brightness  ↵ size  i details  n night shift  ? more  esc close
