crates/display/src/snapshots/telmo_display__ui__tests__linux_night_unavailable.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(snapshot, \"\\t\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│     Dell S2722DGM                  ━━━━━━━━━━━━━━────────────────    45%               │
│     LG 24MK430H                    brightness not adjustable                           │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Night Shift ──────────────────────────────────────────────────────────────────────────╮
│ ▌   Warmth                         unavailable                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯












 ←→ warmth  ↵ on or off  tab displays  ? more  esc close
