crates/display/src/snapshots/telmo_display__ui__tests__mac_details.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(mock::mac(), \"ji\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│     MacBook Air Built-in           ━━━━━━━━━━━━━━━━━━────────────    60%               │
│ ▌   LG UltraFine                   ━━━━━━━━━━━━━━────────────────    45%               │
│     Keyboard                       ━━━━━━━━━─────────────────────    30%               │
╰──────────────────╭─ LG UltraFine ───────────────────────────────────╮──────────────────╯
╭─ Night Shift ────│                                                  │──────────────────╮
│     Warmth       │   Resolution    5120 × 2880                      │off               │
╰──────────────────│   Refresh rate  60 Hz                            │──────────────────╯
                   │   Scale         2x                               │
                   │   Connection    Thunderbolt                      │
                   │                                                  │
                   │  esc back                                        │
                   │                                                  │
                   ╰──────────────────────────────────────────────────╯





 ←→ brightness  ↵ size  i details  n night shift  ? more  esc close
