crates/display/src/snapshots/telmo_display__ui__tests__mac_keyboard.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(mock::mac(), \"jj\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│     MacBook Air Built-in           ━━━━━━━━━━━━━━━━━━────────────    60%               │
│     LG UltraFine                   ━━━━━━━━━━━━━━────────────────    45%               │
│ ▌   Keyboard                       ━━━━━━━━━─────────────────────    30%               │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Night Shift ──────────────────────────────────────────────────────────────────────────╮
│     Warmth                         ━━━━━━━━━━━━━━━───────────────    off               │
╰────────────────────────────────────────────────────────────────────────────────────────╯











 ←→ brightness  ↵ size  i details  n night shift  ? more  esc close
