crates/display/src/snapshots/telmo_display__ui__tests__mac_night.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(mock::mac(), \"n\\t\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│     MacBook Air Built-in           ━━━━━━━━━━━━━━━━━━────────────    60%               │
│     LG UltraFine                   ━━━━━━━━━━━━━━────────────────    45%               │
│     Keyboard                       ━━━━━━━━━─────────────────────    30%               │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Night Shift ──────────────────────────────────────────────────────────────────────────╮
│ ▌ ● Warmth                         ━━━━━━━━━━━━━━━───────────────    50%               │
╰────────────────────────────────────────────────────────────────────────────────────────╯











 ←→ warmth  ↵ on or off  tab displays  ? more  esc close
