crates/display/src/snapshots/telmo_display__ui__tests__mac_size.snap
---
source: crates/display/src/ui.rs
expression: "render(&app(mock::mac(), \"\\n\"))"
---
 Display

╭─ Displays ─────────────────────────────────────────────────────────────────────────────╮
│ ▌   MacBook Air Built-in           ━━━━━━━━━━━━━━━━━━────────────    60%               │
│     LG UltraFine                   ━━━━━━━━━━━━━━────────────────    45%               │
│     Keyb╭─ MacBook Air Built-in size ────────────────────────────────────────╮         │
╰─────────│                                                                    │─────────╯
╭─ Night S│     1024 × 640    Larger text                                      │─────────╮
│     Warm│     1280 × 800                                                     │         │
╰─────────│ ▌ ● 1440 × 900    Default                                          │─────────╯
          │     1710 × 1107                                                    │
          │     1920 × 1200   More space                                       │
          │                                                                    │
          │  ↵ apply   esc cancel                                              │
          │                                                                    │
          ╰────────────────────────────────────────────────────────────────────╯





 ←→ brightness  ↵ size  i details  n night shift  ? more  esc close
